Sculpt Mode - Tools Tab - Falloff Panel - Clipping Options menu disappears with the try to move the mouse over it #63566

Closed
opened 2019-04-13 13:04:49 +02:00 by Reiner Prokein · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 55), branch: blender2.7, commit date: 2019-04-09 18:12, hash: 009dbc2bc9
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

The Clipping Options menu in the Falloff panel disappears with the try to move the mouse over it.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

Open Blender, enter Sculpt mode. In Properties Editor switch to the Tools tab and open the Falloff panel.

Open the Clipping Options menu, and try to edit one of the values. When you move the mouse the menu sometimes disappears. And then you can't edit the values.

I am not sure if this problem not also exists in other modes and panels. The direct neighbour menu, tools, shows equal problems sometimes. But this case here with the Clipping Options menu is good to reproduce here.

unreachablemenu.mp4
menuproblem.jpg

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 55), branch: blender2.7, commit date: 2019-04-09 18:12, hash: `009dbc2bc9` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] The Clipping Options menu in the Falloff panel disappears with the try to move the mouse over it. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] Open Blender, enter Sculpt mode. In Properties Editor switch to the Tools tab and open the Falloff panel. Open the Clipping Options menu, and try to edit one of the values. When you move the mouse the menu sometimes disappears. And then you can't edit the values. I am not sure if this problem not also exists in other modes and panels. The direct neighbour menu, tools, shows equal problems sometimes. But this case here with the Clipping Options menu is good to reproduce here. [unreachablemenu.mp4](https://archive.blender.org/developer/F6939584/unreachablemenu.mp4) ![menuproblem.jpg](https://archive.blender.org/developer/F6939588/menuproblem.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles
William Reynish was assigned by Sebastian Parborg 2019-04-14 14:13:22 +02:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
William Reynish removed their assignment 2019-04-16 18:53:13 +02:00
Campbell Barton was assigned by William Reynish 2019-04-16 18:53:13 +02:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@ideasman42 We can make it a proper popover? Should work better I guess?

@ideasman42 We can make it a proper popover? Should work better I guess?

This issue was referenced by bde1561fc1

This issue was referenced by bde1561fc1ad503f06b1873c767f615b6485a2e9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63566
No description provided.