Fix T63566: Pop-up closes before mouse-over

Closely spaced buttons caused the curve clipping popup to close
before the cursor could mouse-over it.